--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
+
+DATABASE_URL="postgres://postgres:ice8666099-@db.sajwgezixhtyyjnxdkhn.supabase.co:5432/postgres?pgbouncer=true"
