--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@clerk/nextjs": "^4.25.1",
     "@hookform/resolvers": "^3.3.1",
+    "@prisma/client": "^5.4.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.284.0",
@@ -21,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.3",
@@ -36,6 +39,7 @@
     "eslint-plugin-perfectionist": "^2.1.0",
     "postcss": "^8",
     "prettier": "^3.0.3",
+    "prisma": "^5.4.0",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
