--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 DATABASE_URL="postgres://postgres:ice8666099-@db.sajwgezixhtyyjnxdkhn.supabase.co:5432/postgres?pgbouncer=true"
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dwvy3ynjq"
