--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
-DATABASE_URL="postgres://postgres:ice8666099-@db.sajwgezixhtyyjnxdkhn.supabase.co:5432/postgres?pgbouncer=true"
+DATABASE_URL=postgres://postgres.sajwgezixhtyyjnxdkhn:IQxD7UbYIGDG8qhY@aws-0-eu-central-1.pooler.supabase.com:6543/postgres?pgbouncer=true
+DIRECT_DATABASE_URL=postgres://postgres.sajwgezixhtyyjnxdkhn:IQxD7UbYIGDG8qhY@aws-0-eu-central-1.pooler.supabase.com:5432/postgres
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dwvy3ynjq"
 
